layout revisited to avoid scrolling on small screens calibration status display made more explicit calibration status display update bug fixed

--- a/src/static/css/calibration.css
+++ b/src/static/css/calibration.css
@@ -91,4 +91,5 @@ ul.step-list li span.done {
 div.calibration-status {
     float: right;
     font-weight: bold;
+    margin-top: 0.7em;
 }
